--- a/article1.html
+++ b/article1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -68,7 +68,7 @@
         </section>
 
         <section class="page-content">
-            <div class="container" style="max-width: 800px;">
+            <div class="container article-body" style="max-width: 800px;">
                  <a href="articles.html" class="view-more-btn" style="margin-bottom: 40px; display: inline-block;">&larr; Back to Articles</a>
                  <p class="article-meta" style="text-align: left; margin-bottom: 20px;">October 1, 2025 · 7 min read</p>
                  <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting" style="width: 100%; border-radius: 10px; margin-bottom: 30px;">
@@ -84,7 +84,32 @@
 
                 <h2>The Evolving Role of the Accountant</h2>
                 <p>With AI handling the "what," accountants are now empowered to focus on the "why" and "what's next." The modern accountant is becoming a data interpreter, a business strategist, and a technology expert. Skills in data analysis, critical thinking, and communication are becoming more important than ever. The future accountant will not be replaced by AI but will work alongside it, leveraging its power to provide deeper, more strategic insights to guide business growth.</p>
+            </div>
+        </section>
 
+        <section class="suggested-articles-section">
+            <div class="container">
+                <h3 class="subsection-title">Read More Articles</h3>
+                <div class="suggestion-grid">
+                    <div class="suggestion-card">
+                        <a href="article2.html">
+                            <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
+                            <div class="suggestion-card-info">
+                                <h4>Understanding Blockchain's Impact on Financial Audits</h4>
+                                <p>A look into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="suggestion-card">
+                        <a href="article3.html">
+                            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="ESG Reporting">
+                            <div class="suggestion-card-info">
+                                <h4>The Rise of ESG: A New Frontier for Financial Reporting</h4>
+                                <p>An overview of the growing importance of Environmental, Social, and Governance (ESG) criteria in financial reporting.</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -94,6 +119,57 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
+    
+    <audio id="background-music" src="background-music.mp3" loop></audio>
+
+    <button id="music-toggle-btn" title="Play/Pause Music">
+        <i class="fas fa-volume-mute"></i>
+    </button>
+    <button id="email-popup-btn" title="Send a Message">
+        <i class="fas fa-envelope"></i>
+    </button>
+
+    <!-- Email Popup Modal -->
+    <div id="email-popup-modal" class="popup-modal">
+        <div class="popup-content">
+            <span class="close-popup-btn">&times;</span>
+            <h3>Send a Quick Message</h3>
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
+                <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
+                <button type="submit" class="cta-button">Send Message</button>
+            </form>
+            <div class="popup-footer">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
+                <span>Powered by Hans</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-nav">
+        <a href="index.html" class="mobile-nav-link">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="projects.html" class="mobile-nav-link">
+            <i class="fas fa-briefcase"></i>
+            <span>Projects</span>
+        </a>
+        <div class="mobile-nav-center">
+            <button id="mobile-email-btn" class="mobile-nav-center-btn" title="Send a Message">
+                <i class="fas fa-envelope"></i>
+            </button>
+        </div>
+        <a href="articles.html" class="mobile-nav-link">
+            <i class="fas fa-newspaper"></i>
+            <span>Articles</span>
+        </a>
+        <a href="index.html#kontak" class="mobile-nav-link">
+            <i class="fas fa-user"></i>
+            <span>Account</span>
+        </a>
+    </nav>
+
     <script src="script.js"></script>
 </body>
 </html>
