--- a/articles.html
+++ b/articles.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -71,34 +71,49 @@
             <div class="container">
                 <div class="article-grid">
                     <!-- Article 1 -->
-                    <div class="article-card">
-                        <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting">
-                        <div class="article-info">
-                            <p class="article-meta">October 1, 2025 · 7 min read</p>
-                            <h3>The Future of AI in Accounting</h3>
-                            <p>Exploring how Artificial Intelligence is automating routine tasks, enhancing data analysis capabilities, and fundamentally reshaping the role of the modern accountant.</p>
-                            <a href="article1.html" class="article-link">Read More</a>
-                        </div>
+                    <div class="article-card-full">
+                        <a href="article1.html">
+                            <div class="article-date-banner">
+                                <span class="day">01</span>
+                                <span class="month">Oct</span>
+                            </div>
+                            <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting">
+                            <div class="project-info">
+                                <h3>The Future of AI in Accounting</h3>
+                                <p>Exploring how Artificial Intelligence is automating routine tasks, enhancing data analysis capabilities, and fundamentally reshaping the role of the modern accountant.</p>
+                                <span class="project-link">Read More &rarr;</span>
+                            </div>
+                        </a>
                     </div>
                     <!-- Article 2 -->
-                    <div class="article-card">
-                        <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
-                        <div class="article-info">
-                            <p class="article-meta">September 15, 2025 · 5 min read</p>
-                            <h3>Understanding Blockchain's Impact on Financial Audits</h3>
-                            <p>A deep dive into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process into a more efficient and reliable practice.</p>
-                            <a href="article2.html" class="article-link">Read More</a>
-                        </div>
+                    <div class="article-card-full">
+                         <a href="article2.html">
+                            <div class="article-date-banner">
+                                <span class="day">15</span>
+                                <span class="month">Sep</span>
+                            </div>
+                            <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
+                            <div class="project-info">
+                                <h3>Understanding Blockchain's Impact on Financial Audits</h3>
+                                <p>A deep dive into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process into a more efficient and reliable practice.</p>
+                                <span class="project-link">Read More &rarr;</span>
+                            </div>
+                        </a>
                     </div>
                     <!-- Article 3 -->
-                     <div class="article-card">
-                        <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="ESG Reporting">
-                        <div class="article-info">
-                            <p class="article-meta">August 28, 2025 · 6 min read</p>
-                            <h3>The Rise of ESG: A New Frontier for Financial Reporting</h3>
-                            <p>An overview of the growing importance of Environmental, Social, and Governance (ESG) criteria in financial reporting and how accountants are adapting to this new demand.</p>
-                            <a href="article3.html" class="article-link">Read More</a>
-                        </div>
+                     <div class="article-card-full">
+                         <a href="article3.html">
+                            <div class="article-date-banner">
+                                <span class="day">28</span>
+                                <span class="month">Aug</span>
+                            </div>
+                            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="ESG Reporting">
+                            <div class="project-info">
+                                <h3>The Rise of ESG: A New Frontier for Financial Reporting</h3>
+                                <p>An overview of the growing importance of Environmental, Social, and Governance (ESG) criteria in financial reporting and how accountants are adapting to this new demand.</p>
+                                <span class="project-link">Read More &rarr;</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -113,15 +128,16 @@
     
     <audio id="background-music" src="background-music.mp3" loop></audio>
     <button id="music-toggle-btn" title="Play/Pause Music"><i class="fas fa-volume-mute"></i></button>
+    <button id="email-popup-btn" title="Send a Message"><i class="fas fa-envelope"></i></button>
 
     <!-- Email Popup Modal -->
     <div id="email-popup-modal" class="popup-modal">
         <div class="popup-content">
             <span class="close-popup-btn">&times;</span>
             <h3>Send a Quick Message</h3>
-            <form id="email-popup-form">
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
                 <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
-                <a id="send-email-link" class="cta-button" href="#">Send via Email Client</a>
+                <button type="submit" class="cta-button">Send Message</button>
             </form>
             <div class="popup-footer">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
@@ -145,7 +161,7 @@
                 <i class="fas fa-envelope"></i>
             </button>
         </div>
-        <a href="articles.html" class="mobile-nav-link">
+        <a href="articles.html" class="mobile-nav-link active">
             <i class="fas fa-newspaper"></i>
             <span>Articles</span>
         </a>
