--- a/clients.html
+++ b/clients.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -69,9 +69,9 @@
 
         <section class="page-content">
             <div class="container">
-                <p class="subsection-description">We have had the privilege of providing accounting and financial consulting services to a diverse range of clients, from startups to established enterprises. Our commitment is to provide tailored solutions that drive financial health and sustainable growth.</p>
+                <p class="subsection-description" style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">We have had the privilege of providing accounting and financial consulting services to a diverse range of clients, from startups to established enterprises. Our commitment is to provide tailored solutions that drive financial health and sustainable growth.</p>
                 
-                <div class="client-grid" style="padding-top: 40px;">
+                <div class="client-grid">
                     <div class="client-logo"><img src="client-logo-1.png" alt="Client Logo 1"></div>
                     <div class="client-logo"><img src="client-logo-2.png" alt="Client Logo 2"></div>
                     <div class="client-logo"><img src="client-logo-3.png" alt="Client Logo 3"></div>
@@ -91,6 +91,31 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
+    
+    <audio id="background-music" src="background-music.mp3" loop></audio>
+
+    <button id="music-toggle-btn" title="Play/Pause Music">
+        <i class="fas fa-volume-mute"></i>
+    </button>
+    <button id="email-popup-btn" title="Send a Message">
+        <i class="fas fa-envelope"></i>
+    </button>
+
+    <!-- Email Popup Modal -->
+    <div id="email-popup-modal" class="popup-modal">
+        <div class="popup-content">
+            <span class="close-popup-btn">&times;</span>
+            <h3>Send a Quick Message</h3>
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
+                <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
+                <button type="submit" class="cta-button">Send Message</button>
+            </form>
+            <div class="popup-footer">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
+                <span>Powered by Hans</span>
+            </div>
+        </div>
+    </div>
 
     <!-- Mobile Bottom Navigation -->
     <nav class="mobile-nav">
