--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HansSites | Personal Profile</title>
-    <meta name="description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    <meta name="description" content="Personal portfolio of Hans, an Accountant.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://your-website-url.com/">
     <meta property="og:title" content="HansSites | Personal Profile">
-    <meta property="og:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    <meta property="og:description" content="Personal portfolio of Hans, an Accountant.">
     <meta property="og:image" content="https://your-website-url.com/hanssites-preview.jpg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://your-website-url.com/">
     <meta property="twitter:title" content="HansSites | Personal Profile">
-    <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
+    <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant.">
     <meta property="twitter:image" content="https://your-website-url.com/hanssites-preview.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Welcome to My Digital World</h1>
-                <p class="subtitle">Accountant | Web & App Developer</p>
+                <p class="subtitle">Accountant | Finance Manager</p>
                 <div class="hero-controls">
                     <button class="slide-nav-inline prev-slide" aria-label="Previous Slide"><i class="fas fa-chevron-left"></i></button>
                     <a href="#kontak" class="cta-button">Contact Me</a>
@@ -111,10 +111,10 @@
                 <div class="bio">
                     <h3>Hello, I'm Hans</h3>
                     <p>
-                        I am a professional Accountant with a solid background in financial management, data analysis, and strategic planning. With years of experience in handling numbers, accuracy, and detail-oriented work, I have developed a strong foundation in problem-solving and critical thinking.
+                        I am a professional Accountant with a solid background in financial management, data analysis, and strategic planning. My experience in handling complex financial data with a high degree of accuracy has honed my problem-solving and critical thinking skills.
                     </p>
                     <p>
-                        Alongside my accounting profession, I am also pursuing my passion in technology as a Web and App Developer. By combining financial expertise with digital innovation, I strive to build solutions that are not only functional and user-friendly, but also efficient in supporting businesses and individuals. My goal is to integrate precision from the world of accounting with creativity in technology, delivering impactful results in both fields.
+                        I am dedicated to leveraging my financial expertise to provide valuable insights and support strategic decision-making for businesses. My goal is to ensure financial integrity and drive efficiency, delivering clear and impactful results in the field of accounting.
                     </p>
                     <div class="animated-icon scales-icon">
                         <i class="fas fa-balance-scale"></i>
@@ -138,28 +138,28 @@
                     <a href="keahlian1.html">
                         <i class="fas fa-file-invoice-dollar"></i>
                         <h3>Financial Reporting</h3>
-                        <p>Expertise in preparing accurate financial statements and reports in accordance with applicable standards.</p>
+                        <p>Expertise in preparing accurate financial statements compliant with IFRS and local standards.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian2.html">
                         <i class="fas fa-landmark"></i>
                         <h3>Taxation</h3>
-                        <p>In-depth knowledge of tax regulations, planning, and compliance to ensure efficiency.</p>
+                        <p>Knowledgeable in tax compliance, planning, and optimization for individuals and corporations.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian3.html">
                         <i class="fas fa-clipboard-check"></i>
                         <h3>Auditing</h3>
-                        <p>Conducting detailed examinations of financial records to ensure accuracy and compliance.</p>
+                        <p>Skilled in conducting internal and external audits to ensure financial accuracy and integrity.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian4.html">
                         <i class="fas fa-chart-line"></i>
                         <h3>Budgeting & Forecasting</h3>
-                        <p>Developing financial plans and projections to guide strategic business decisions.</p>
+                        <p>Proficient in creating financial models for strategic planning and performance analysis.</p>
                     </a>
                 </div>
             </div>
@@ -200,19 +200,19 @@
 
             <div class="project-grid">
                 <div class="project-card searchable-content">
-                    <img src="coverthumbnail-project1.jpg" alt="Thé Ciliwung Tea Estate">
+                    <img src="coverthumbnail-project1.jpg" alt="Website Wisata">
                     <div class="project-info">
                         <h3>Thé Ciliwung Tea Estate</h3>
-                        <p>A tranquil tea estate in Puncak, Bogor, offering a serene escape from city life. This project focused on creating an elegant and peaceful online presence for a unique tourist destination.</p>
+                        <p>A tranquil getaway website for a tea estate in Puncak, Bogor. Designed to offer an oasis of tranquility and an unforgettable natural experience, this site focuses on clear navigation and responsive design.</p>
                         <a href="project1.html" class="project-link">View Details</a>
                     </div>
                 </div>
                 <div class="project-card searchable-content">
-                    <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="HansSites News Blog">
+                    <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="News Blog">
                     <div class="project-info">
                         <h3>HansSites News Blog</h3>
-                        <p>A personal blog project to share insights and news. Built with a focus on readability, a clean minimalist design, and an intuitive content management experience.</p>
-                        <div class="project-tags"><span>Blog</span><span>Content Creation</span></div>
+                        <p>A personal blog and news portal created to share insights, updates, and articles on various topics, acting as a central hub for information and personal branding.</p>
+                        <div class="project-tags"><span>Blog</span><span>Content</span><span>News</span></div>
                         <a href="project2.html" class="project-link">View Details</a>
                     </div>
                 </div>
@@ -239,20 +239,26 @@
             <h2 class="section-title">Recent Articles</h2>
             <div class="article-grid">
                 <!-- Article 1 Preview -->
-                <div class="article-card searchable-content">
+                <div class="article-card-full searchable-content">
+                    <div class="article-date-banner">
+                        <span class="day">01</span>
+                        <span class="month">Oct</span>
+                    </div>
                     <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting">
                     <div class="article-info">
-                        <p class="article-meta">October 1, 2025 · 7 min read</p>
                         <h3>The Future of AI in Accounting</h3>
                         <p>Exploring how AI is automating tasks, enhancing data analysis, and reshaping the role of the modern accountant.</p>
                         <a href="article1.html" class="article-link">Read More</a>
                     </div>
                 </div>
                 <!-- Article 2 Preview -->
-                <div class="article-card searchable-content">
+                <div class="article-card-full searchable-content">
+                     <div class="article-date-banner">
+                        <span class="day">15</span>
+                        <span class="month">Sep</span>
+                    </div>
                     <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
                     <div class="article-info">
-                        <p class="article-meta">September 15, 2025 · 5 min read</p>
                         <h3>Understanding Blockchain's Impact on Financial Audits</h3>
                         <p>A look into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process.</p>
                         <a href="article2.html" class="article-link">Read More</a>
@@ -328,6 +334,8 @@
     <button id="music-toggle-btn" title="Play/Pause Music">
         <i class="fas fa-volume-mute"></i>
     </button>
+    <button id="email-popup-btn" title="Send a Message"><i class="fas fa-envelope"></i></button>
+
 
     <!-- Email Popup Modal -->
     <div id="email-popup-modal" class="popup-modal">
@@ -381,7 +389,7 @@
     
     <!-- Mobile Bottom Navigation -->
     <nav class="mobile-nav">
-        <a href="index.html" class="mobile-nav-link">
+        <a href="index.html" class="mobile-nav-link active">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
