--- a/keahlian1.html
+++ b/keahlian1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financial Analysis & Management | HansSites</title>
+    <title>Financial Reporting | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -63,7 +63,7 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Core Competency</p>
-                <h1 class="detail-hero-title">Financial Analysis & Management</h1>
+                <h1 class="detail-hero-title">Financial Reporting</h1>
             </div>
         </section>
 
@@ -73,12 +73,12 @@
 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1633113087822-a0a382155a40?q=80&w=2070&auto=format&fit=crop" alt="Financial analysis charts and graphs">
+                        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop" alt="Financial reporting charts and graphs">
                     </div>
                     <div class="detail-text-column">
-                        <h2>From Data to Decisions</h2>
-                        <p>With a strong foundation in accounting principles, I specialize in transforming complex financial data into actionable insights. My approach goes beyond mere number-crunching; it's about understanding the story behind the numbers to drive strategic decision-making.</p>
-                        <p>Whether it's evaluating investment opportunities, optimizing costs, or forecasting future performance, my goal is to provide clarity and confidence to stakeholders.</p>
+                        <h2>Clarity and Compliance</h2>
+                        <p>With a strong foundation in accounting principles, I specialize in transforming complex financial data into clear and compliant financial reports. My approach goes beyond mere number-crunching; it's about presenting the financial health of an organization with accuracy and integrity to inform strategic decision-making.</p>
+                        <p>Whether it's for internal management or external stakeholders, my goal is to provide financial statements that are reliable, understandable, and adhere to all relevant standards.</p>
                     </div>
                 </div>
 
@@ -86,26 +86,26 @@
                      <h3 class="subsection-title">Key Competencies</h3>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fas fa-chart-pie"></i>
-                            <h3>Financial Modeling</h3>
-                            <p>Building dynamic models for forecasting, budgeting, and valuation.</p>
+                            <i class="fas fa-book"></i>
+                            <h3>IFRS & GAAP Standards</h3>
+                            <p>Ensuring financial statements are fully compliant with international and local accounting standards.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-file-alt"></i>
-                            <h3>Statutory Reporting</h3>
-                            <p>Ensuring accurate and compliant financial statements under IFRS and local GAAP.</p>
+                            <h3>Statement Preparation</h3>
+                            <p>Accurately preparing Balance Sheets, Income Statements, and Cash Flow Statements.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-bullseye"></i>
-                            <h3>Performance Analysis</h3>
-                            <p>Analyzing key performance indicators (KPIs) to identify trends and areas for improvement.</p>
+                            <i class="fas fa-chart-pie"></i>
+                            <h3>Financial Analysis</h3>
+                            <p>Interpreting financial data to provide actionable insights for business performance.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="cta-section">
-                    <h2>Ready to Improve Your Financial Strategy?</h2>
-                    <p>Let's work together to unlock the full potential of your financial data.</p>
+                    <h2>Need Accurate Financial Reporting?</h2>
+                    <p>Let's work together to bring clarity to your financial data.</p>
                     <a href="index.html#kontak" class="cta-button">Get in Touch</a>
                 </div>
 
@@ -119,6 +119,51 @@
         </div>
     </footer>
     
+    <audio id="background-music" src="background-music.mp3" loop></audio>
+    <button id="music-toggle-btn" title="Play/Pause Music"><i class="fas fa-volume-mute"></i></button>
+    <button id="email-popup-btn" title="Send a Message"><i class="fas fa-envelope"></i></button>
+
+    <!-- Email Popup Modal -->
+    <div id="email-popup-modal" class="popup-modal">
+        <div class="popup-content">
+            <span class="close-popup-btn">&times;</span>
+            <h3>Send a Quick Message</h3>
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
+                <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
+                <button type="submit" class="cta-button">Send Message</button>
+            </form>
+            <div class="popup-footer">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
+                <span>Powered by Hans</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-nav">
+        <a href="index.html" class="mobile-nav-link">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="projects.html" class="mobile-nav-link">
+            <i class="fas fa-briefcase"></i>
+            <span>Projects</span>
+        </a>
+        <div class="mobile-nav-center">
+            <button id="mobile-email-btn" class="mobile-nav-center-btn" title="Send a Message">
+                <i class="fas fa-envelope"></i>
+            </button>
+        </div>
+        <a href="articles.html" class="mobile-nav-link">
+            <i class="fas fa-newspaper"></i>
+            <span>Articles</span>
+        </a>
+        <a href="index.html#kontak" class="mobile-nav-link">
+            <i class="fas fa-user"></i>
+            <span>Account</span>
+        </a>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
+
