--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hanssites News Blog | HansSites</title>
+    <title>HansSites News Blog | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -63,8 +63,8 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">Hanssites News Blog</h1>
-                <a href="https://hanssites.news.blog/" target="_blank" class="cta-button" style="margin-top: 25px;">Visit Website</a>
+                <h1 class="detail-hero-title">HansSites News Blog</h1>
+                <a href="https://hanssites.news.blog/" target="_blank" class="cta-button" style="margin-top: 20px;">Visit Website</a>
             </div>
         </section>
 
@@ -74,12 +74,12 @@
                 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=2070&auto=format&fit=crop" alt="Digital news on various screens">
+                        <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="News Blog">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>Hanssites News Blog is a personal platform created to share the latest news, in-depth analysis, and personal insights on a variety of topics. The blog aims to be a source of reliable information and thoughtful commentary for its readers.</p>
-                        <p>Developed on a popular blogging platform, the focus was on creating a clean, readable, and easily navigable space where content is the main star. The design prioritizes user experience, ensuring that readers can comfortably engage with the articles on any device.</p>
+                        <p>HansSites News Blog is a personal content platform designed to serve as a central hub for sharing news, insights, and articles. The site is built with a focus on readability and a clean user interface, making it easy for visitors to browse and engage with the content.</p>
+                        <p>This project serves as an online presence for personal branding, allowing for the publication of updates and analysis on a variety of topics, positioning the author as a voice in their chosen fields.</p>
                     </div>
                 </div>
 
@@ -88,23 +88,18 @@
                     <div class="competency-grid">
                         <div class="competency-card">
                             <i class="fas fa-newspaper"></i>
-                            <h3>Topical Articles</h3>
-                            <p>Features well-researched articles on current events, technology, and finance.</p>
+                            <h3>Content Publishing</h3>
+                            <p>A simple and effective platform for publishing articles and news updates regularly.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-pen-nib"></i>
-                            <h3>Personal Commentary</h3>
-                            <p>Offers unique perspectives and analysis, going beyond just reporting the news.</p>
+                            <i class="fas fa-th-list"></i>
+                            <h3>Organized Categories</h3>
+                            <p>Content is structured into clear categories, allowing for easy navigation and topic discovery.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-comments"></i>
-                            <h3>Reader Engagement</h3>
-                            <p>Includes a comments section on each post to foster discussion and community interaction.</p>
-                        </div>
-                         <div class="competency-card">
-                            <i class="fas fa-search"></i>
-                            <h3>Content Categorization</h3>
-                            <p>Uses tags and categories to organize posts, making it easy for readers to find topics of interest.</p>
+                            <i class="fas fa-share-alt"></i>
+                            <h3>Social Integration</h3>
+                            <p>Includes features for sharing articles on social media to increase reach and engagement.</p>
                         </div>
                     </div>
                 </div>
@@ -119,13 +114,31 @@
         </div>
     </footer>
 
-    <!-- Mobile Bottom Navigation -->
+    <audio id="background-music" src="background-music.mp3" loop></audio>
+    <button id="music-toggle-btn" title="Play/Pause Music"><i class="fas fa-volume-mute"></i></button>
+    <button id="email-popup-btn" title="Send a Message"><i class="fas fa-envelope"></i></button>
+
+    <div id="email-popup-modal" class="popup-modal">
+        <div class="popup-content">
+            <span class="close-popup-btn">&times;</span>
+            <h3>Send a Quick Message</h3>
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
+                <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
+                <button type="submit" class="cta-button">Send Message</button>
+            </form>
+            <div class="popup-footer">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
+                <span>Powered by Hans</span>
+            </div>
+        </div>
+    </div>
+    
     <nav class="mobile-nav">
         <a href="index.html" class="mobile-nav-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="projects.html" class="mobile-nav-link">
+        <a href="projects.html" class="mobile-nav-link active">
             <i class="fas fa-briefcase"></i>
             <span>Projects</span>
         </a>
