--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="navbar scrolled">
+    <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo-container">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
@@ -75,47 +75,47 @@
                         <img src="coverthumbnail-project1.jpg" alt="Website Wisata">
                         <div class="project-info">
                             <h3>Thé Ciliwung Tea Estate</h3>
-                            <p>Located in Puncak, Bogor, Thé Ciliwung is a place where time slows down. Built with love and respect for nature, we offer an oasis of tranquility for those who want to escape the hustle and bustle of city life. Every corner is designed to provide maximum comfort and an unforgettable experience.</p>
-                            <div class="project-tags">
-                            </div>
+                            <p>A tranquil getaway website for a tea estate in Puncak, Bogor. Designed to offer an oasis of tranquility and an unforgettable natural experience, this site focuses on clear navigation and responsive design.</p>
                             <a href="project1.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <!-- Project 2 -->
                     <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=2070&auto=format&fit=crop" alt="Web Design">
+                        <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="News Blog">
                         <div class="project-info">
-                            <h3>Hanssites News Blog</h3>
-                            <p>A personal platform for sharing the latest news, in-depth analysis, and unique insights on a variety of current topics.</p>
-                            <div class="project-tags"><span>Blog</span><span>Content Creation</span></div>
+                            <h3>HansSites News Blog</h3>
+                            <p>A personal blog and news portal created to share insights, updates, and articles on various topics, acting as a central hub for information and personal branding.</p>
+                             <div class="project-tags"><span>Blog</span><span>Content</span><span>News</span></div>
                             <a href="project2.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <!-- Project 3 -->
                     <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1633113087822-a0a382155a40?q=80&w=2070&auto=format&fit=crop" alt="System Implementation">
+                        <img src="https://images.unsplash.com/photo-1575718742380-9751e0563b72?q=80&w=1974&auto=format&fit=crop" alt="Sweet Drink">
                         <div class="project-info">
-                            <h3>Financial System Implementation</h3>
-                            <p>Led the implementation of a new cloud-based accounting system, streamlining financial operations and improving reporting accuracy and speed.</p>
-                            <div class="project-tags"><span>System Migration</span><span>QuickBooks</span><span>Automation</span></div>
+                            <h3>Hansswink Sweetdrink</h3>
+                            <p>A vibrant promotional website for a sweet beverage brand, created with Canva. The site focuses on strong visual appeal to attract customers and showcase product variety.</p>
+                            <div class="project-tags"><span>Canva</span><span>Branding</span><span>Marketing</span></div>
+                             <a href="project3.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <!-- Project 4 -->
                     <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1556155092-490a1ba16284?q=80&w=2070&auto=format&fit=crop" alt="Budgeting">
+                        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=2070&auto=format&fit=crop" alt="Personal Portfolio">
                         <div class="project-info">
-                            <h3>Budgeting and Forecasting Model</h3>
-                            <p>Developed a dynamic financial model for a retail company to improve budgeting accuracy and provide rolling forecasts for better strategic planning.</p>
-                            <div class="project-tags"><span>Financial Modeling</span><span>Budgeting</span><span>Forecasting</span></div>
+                            <h3>Personal Portfolio Site</h3>
+                            <p>A personal portfolio website for Farhan Abdullah, created using Canva's website builder to act as a digital resume and creative space.</p>
+                            <div class="project-tags"><span>Canva</span><span>Portfolio</span><span>Branding</span></div>
+                             <a href="project4.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <!-- Project 5 -->
                     <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop" alt="Project 5">
+                        <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial reporting documents and charts">
                         <div class="project-info">
-                            <h3>New Project Title</h3>
-                            <p>A brief description of this new and exciting project will go here. It showcases skills in X, Y, and Z.</p>
-                            <div class="project-tags"><span>New Tag 1</span><span>New Tag 2</span></div>
+                            <h3>Financial Reporting Suite</h3>
+                            <p>Designed and implemented a comprehensive financial reporting system to automate the generation of key financial statements and provide deeper insights through detailed analysis.</p>
+                            <div class="project-tags"><span>Automation</span><span>IFRS</span><span>Reporting</span></div>
                             <a href="project5.html" class="project-link">View Details</a>
                         </div>
                     </div>
@@ -132,15 +132,16 @@
     
     <audio id="background-music" src="background-music.mp3" loop></audio>
     <button id="music-toggle-btn" title="Play/Pause Music"><i class="fas fa-volume-mute"></i></button>
+    <button id="email-popup-btn" title="Send a Message"><i class="fas fa-envelope"></i></button>
 
     <!-- Email Popup Modal -->
     <div id="email-popup-modal" class="popup-modal">
         <div class="popup-content">
             <span class="close-popup-btn">&times;</span>
             <h3>Send a Quick Message</h3>
-            <form id="email-popup-form">
+            <form id="email-popup-form" action="https://formspree.io/f/mkgqzppe" method="POST">
                 <textarea id="popup-message" name="message" rows="6" placeholder="Type your message here..."></textarea>
-                <a id="send-email-link" class="cta-button" href="#">Send via Email Client</a>
+                <button type="submit" class="cta-button">Send Message</button>
             </form>
             <div class="popup-footer">
                 <img src="logo-hanssites.png" alt="HansSites Logo" class="popup-logo">
@@ -155,7 +156,7 @@
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="projects.html" class="mobile-nav-link">
+        <a href="projects.html" class="mobile-nav-link active">
             <i class="fas fa-briefcase"></i>
             <span>Projects</span>
         </a>
