--- a/articles.html
+++ b/articles.html
@@ -71,50 +71,47 @@
             <div class="container">
                 <div class="article-grid">
                     <!-- Article 1 -->
-                    <div class="article-card-full">
-                        <a href="article1.html">
+                    <a href="article1.html" class="article-card-full-link">
+                        <div class="article-card-full">
                             <div class="article-date-banner">
                                 <span class="day">01</span>
                                 <span class="month">Oct</span>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting">
-                            <div class="project-info">
+                            <img src="article1-thumbnail-1.jpg" alt="AI and Accounting">
+                            <div class="article-info">
                                 <h3>The Future of AI in Accounting</h3>
-                                <p>Exploring how Artificial Intelligence is automating routine tasks, enhancing data analysis capabilities, and fundamentally reshaping the role of the modern accountant.</p>
-                                <span class="project-link">Read More &rarr;</span>
+                                <p>Artificial Intelligence (AI) is no longer a futuristic concept from science fiction; it is a tangible force actively reshaping industries, and accounting is at the forefront of this transformation.</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!-- Article 2 -->
-                    <div class="article-card-full">
-                         <a href="article2.html">
-                            <div class="article-date-banner">
+                    <a href="article2.html" class="article-card-full-link">
+                        <div class="article-card-full">
+                             <div class="article-date-banner">
                                 <span class="day">15</span>
                                 <span class="month">Sep</span>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
-                            <div class="project-info">
+                            <img src="article2-thumbnail-1.jpg" alt="Blockchain Technology">
+                            <div class="article-info">
                                 <h3>Understanding Blockchain's Impact on Financial Audits</h3>
-                                <p>A deep dive into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process into a more efficient and reliable practice.</p>
-                                <span class="project-link">Read More &rarr;</span>
+                                <p>Blockchain technology, the decentralized and immutable ledger system famously known for powering cryptocurrencies like Bitcoin, is poised to bring a seismic shift to the world of financial auditing.</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!-- Article 3 -->
-                     <div class="article-card-full">
-                         <a href="article3.html">
-                            <div class="article-date-banner">
+                     <a href="article3.html" class="article-card-full-link">
+                        <div class="article-card-full">
+                             <div class="article-date-banner">
                                 <span class="day">28</span>
                                 <span class="month">Aug</span>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="ESG Reporting">
-                            <div class="project-info">
+                            <img src="article3-thumbnail-1.jpg" alt="ESG Reporting">
+                            <div class="article-info">
                                 <h3>The Rise of ESG: A New Frontier for Financial Reporting</h3>
-                                <p>An overview of the growing importance of Environmental, Social, and Governance (ESG) criteria in financial reporting and how accountants are adapting to this new demand.</p>
-                                <span class="project-link">Read More &rarr;</span>
+                                <p>A global shift in consciousness has led investors, consumers, and regulators to demand greater accountability from corporations regarding their impact on the planet and society.</p>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -161,7 +158,7 @@
                 <i class="fas fa-envelope"></i>
             </button>
         </div>
-        <a href="articles.html" class="mobile-nav-link active">
+        <a href="articles.html" class="mobile-nav-link">
             <i class="fas fa-newspaper"></i>
             <span>Articles</span>
         </a>
