--- a/projects.html
+++ b/projects.html
@@ -71,54 +71,62 @@
             <div class="container">
                 <div class="project-grid">
                     <!-- Project 1 -->
-                    <div class="project-card">
-                        <img src="coverthumbnail-project1.jpg" alt="Website Wisata">
-                        <div class="project-info">
-                            <h3>Thé Ciliwung Tea Estate</h3>
-                            <p>A tranquil getaway website for a tea estate in Puncak, Bogor. Designed to offer an oasis of tranquility and an unforgettable natural experience, this site focuses on clear navigation and responsive design.</p>
-                            <a href="project1.html" class="project-link">View Details</a>
+                    <a href="project1.html" class="project-card-link searchable-content">
+                        <div class="project-card">
+                            <img src="project-thumbnail-1.jpg" alt="Website Wisata">
+                            <div class="project-info">
+                                <h3>Thé Ciliwung Tea Estate</h3>
+                                <p>A website project to introduce and promote the tourist destinations along the Ciliwung River flow, designed to be a digital guide for tourists.</p>
+                                <div class="project-tags">
+                                    <span>Website</span><span>Tourism</span><span>HTML</span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <!-- Project 2 -->
-                    <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="News Blog">
-                        <div class="project-info">
-                            <h3>HansSites News Blog</h3>
-                            <p>A personal blog and news portal created to share insights, updates, and articles on various topics, acting as a central hub for information and personal branding.</p>
-                             <div class="project-tags"><span>Blog</span><span>Content</span><span>News</span></div>
-                            <a href="project2.html" class="project-link">View Details</a>
+                    <a href="project2.html" class="project-card-link searchable-content">
+                        <div class="project-card">
+                            <img src="project-thumbnail-2.jpg" alt="HansSites News Blog">
+                            <div class="project-info">
+                                <h3>HansSites News Blog</h3>
+                                <p>A personal news and article blog created using Canva's website builder, featuring a clean layout for a pleasant reading experience.</p>
+                                <div class="project-tags"><span>Canva</span><span>Blog</span><span>Content</span></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <!-- Project 3 -->
-                    <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1575718742380-9751e0563b72?q=80&w=1974&auto=format&fit=crop" alt="Sweet Drink">
-                        <div class="project-info">
-                            <h3>Hansswink Sweetdrink</h3>
-                            <p>A vibrant promotional website for a sweet beverage brand, created with Canva. The site focuses on strong visual appeal to attract customers and showcase product variety.</p>
-                            <div class="project-tags"><span>Canva</span><span>Branding</span><span>Marketing</span></div>
-                             <a href="project3.html" class="project-link">View Details</a>
+                    <a href="project3.html" class="project-card-link searchable-content">
+                        <div class="project-card">
+                            <img src="project-thumbnail-3.jpg" alt="Hansswink Sweetdrink">
+                            <div class="project-info">
+                                <h3>Hansswink Sweetdrink</h3>
+                                <p>A vibrant and engaging website for a modern beverage brand, designed to attract a young audience, built with Canva.</p>
+                                <div class="project-tags"><span>Canva</span><span>Branding</span><span>Marketing</span></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <!-- Project 4 -->
-                    <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=2070&auto=format&fit=crop" alt="Personal Portfolio">
-                        <div class="project-info">
-                            <h3>Personal Portfolio Site</h3>
-                            <p>A personal portfolio website for Farhan Abdullah, created using Canva's website builder to act as a digital resume and creative space.</p>
-                            <div class="project-tags"><span>Canva</span><span>Portfolio</span><span>Branding</span></div>
-                             <a href="project4.html" class="project-link">View Details</a>
+                    <a href="project4.html" class="project-card-link searchable-content">
+                        <div class="project-card">
+                            <img src="project-thumbnail-4.jpg" alt="Personal Portfolio">
+                            <div class="project-info">
+                                <h3>Personal Portfolio Site</h3>
+                                <p>A clean and modern personal portfolio website created with Canva to showcase skills, projects, and professional experience.</p>
+                                <div class="project-tags"><span>Canva</span><span>Portfolio</span><span>CV</span></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                     <!-- Project 5 -->
-                    <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial reporting documents and charts">
-                        <div class="project-info">
-                            <h3>Financial Reporting Suite</h3>
-                            <p>Designed and implemented a comprehensive financial reporting system to automate the generation of key financial statements and provide deeper insights through detailed analysis.</p>
-                            <div class="project-tags"><span>Automation</span><span>IFRS</span><span>Reporting</span></div>
-                            <a href="project5.html" class="project-link">View Details</a>
+                    <a href="project5.html" class="project-card-link searchable-content">
+                        <div class="project-card">
+                            <img src="project-thumbnail-5.jpg" alt="Financial Reporting">
+                            <div class="project-info">
+                                <h3>Financial Reporting Suite</h3>
+                                <p>A comprehensive financial reporting system designed to automate key statements and provide deeper insights for a manufacturing company.</p>
+                                <div class="project-tags"><span>Automation</span><span>IFRS</span><span>Analysis</span></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -156,7 +164,7 @@
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="projects.html" class="mobile-nav-link active">
+        <a href="projects.html" class="mobile-nav-link">
             <i class="fas fa-briefcase"></i>
             <span>Projects</span>
         </a>
