--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HansSites | Personal Profile</title>
-    <meta name="description" content="Personal portfolio of Hans, an Accountant.">
+    <meta name="description" content="Personal portfolio of Hans, an Accountant and Finance Manager.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://your-website-url.com/">
     <meta property="og:title" content="HansSites | Personal Profile">
-    <meta property="og:description" content="Personal portfolio of Hans, an Accountant.">
+    <meta property="og:description" content="Personal portfolio of Hans, an Accountant and Finance Manager.">
     <meta property="og:image" content="https://your-website-url.com/hanssites-preview.jpg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://your-website-url.com/">
     <meta property="twitter:title" content="HansSites | Personal Profile">
-    <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant.">
+    <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant and Finance Manager.">
     <meta property="twitter:image" content="https://your-website-url.com/hanssites-preview.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,10 +111,10 @@
                 <div class="bio">
                     <h3>Hello, I'm Hans</h3>
                     <p>
-                        I am a professional Accountant with a solid background in financial management, data analysis, and strategic planning. My experience in handling complex financial data with a high degree of accuracy has honed my problem-solving and critical thinking skills.
+                        I am a professional Accountant with a solid background in financial management, data analysis, and strategic planning. With years of experience in handling numbers, accuracy, and detail-oriented work, I have developed a strong foundation in problem-solving and critical thinking.
                     </p>
                     <p>
-                        I am dedicated to leveraging my financial expertise to provide valuable insights and support strategic decision-making for businesses. My goal is to ensure financial integrity and drive efficiency, delivering clear and impactful results in the field of accounting.
+                        My goal is to apply my expertise to help businesses achieve financial health and sustainable growth. I am passionate about integrating precision from the world of accounting with strategic financial insights to deliver impactful results.
                     </p>
                     <div class="animated-icon scales-icon">
                         <i class="fas fa-balance-scale"></i>
@@ -136,30 +136,30 @@
             <div class="skills-grid">
                 <div class="skill-card searchable-content">
                     <a href="keahlian1.html">
-                        <i class="fas fa-file-invoice-dollar"></i>
+                        <i class="fas fa-chart-pie"></i>
                         <h3>Financial Reporting</h3>
-                        <p>Expertise in preparing accurate financial statements compliant with IFRS and local standards.</p>
+                        <p>Expert in preparing and analyzing financial statements that comply with accounting standards.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian2.html">
-                        <i class="fas fa-landmark"></i>
+                        <i class="fas fa-file-invoice-dollar"></i>
                         <h3>Taxation</h3>
-                        <p>Knowledgeable in tax compliance, planning, and optimization for individuals and corporations.</p>
+                        <p>In-depth knowledge of tax regulations, planning, and compliance for individuals and corporations.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian3.html">
-                        <i class="fas fa-clipboard-check"></i>
+                        <i class="fas fa-tasks"></i>
                         <h3>Auditing</h3>
-                        <p>Skilled in conducting internal and external audits to ensure financial accuracy and integrity.</p>
+                        <p>Experienced in conducting internal and external audits to ensure accuracy and compliance.</p>
                     </a>
                 </div>
                 <div class="skill-card searchable-content">
                     <a href="keahlian4.html">
                         <i class="fas fa-chart-line"></i>
                         <h3>Budgeting & Forecasting</h3>
-                        <p>Proficient in creating financial models for strategic planning and performance analysis.</p>
+                        <p>Skilled in creating financial models for strategic planning and performance monitoring.</p>
                     </a>
                 </div>
             </div>
@@ -199,23 +199,26 @@
             </div>
 
             <div class="project-grid">
-                <div class="project-card searchable-content">
-                    <img src="coverthumbnail-project1.jpg" alt="Website Wisata">
-                    <div class="project-info">
-                        <h3>Thé Ciliwung Tea Estate</h3>
-                        <p>A tranquil getaway website for a tea estate in Puncak, Bogor. Designed to offer an oasis of tranquility and an unforgettable natural experience, this site focuses on clear navigation and responsive design.</p>
-                        <a href="project1.html" class="project-link">View Details</a>
+                <a href="project1.html" class="project-card-link searchable-content">
+                    <div class="project-card">
+                        <img src="project-thumbnail-1.jpg" alt="Website Wisata">
+                        <div class="project-info">
+                            <h3>Thé Ciliwung Tea Estate</h3>
+                            <p>A website project to introduce and promote the tourist destinations along the Ciliwung River flow, designed to be a digital guide for tourists.</p>
+                            <div class="project-tags"><span>Website</span><span>Tourism</span><span>HTML</span></div>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card searchable-content">
-                    <img src="https://images.unsplash.com/photo-1495020689067-958852a7765e?q=80&w=2069&auto=format&fit=crop" alt="News Blog">
-                    <div class="project-info">
-                        <h3>HansSites News Blog</h3>
-                        <p>A personal blog and news portal created to share insights, updates, and articles on various topics, acting as a central hub for information and personal branding.</p>
-                        <div class="project-tags"><span>Blog</span><span>Content</span><span>News</span></div>
-                        <a href="project2.html" class="project-link">View Details</a>
+                </a>
+                <a href="project2.html" class="project-card-link searchable-content">
+                    <div class="project-card">
+                        <img src="project-thumbnail-2.jpg" alt="Project 2 Thumbnail">
+                        <div class="project-info">
+                            <h3>HansSites News Blog</h3>
+                            <p>A personal news and article blog created using Canva's website builder, featuring a clean layout and easy navigation for a pleasant reading experience.</p>
+                            <div class="project-tags"><span>Canva</span><span>Blog</span><span>Content</span></div>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
 
             <div id="no-results-projects" class="no-results-message" style="display: none;">
@@ -239,31 +242,33 @@
             <h2 class="section-title">Recent Articles</h2>
             <div class="article-grid">
                 <!-- Article 1 Preview -->
-                <div class="article-card-full searchable-content">
-                    <div class="article-date-banner">
-                        <span class="day">01</span>
-                        <span class="month">Oct</span>
+                <a href="article1.html" class="article-card-full-link searchable-content">
+                    <div class="article-card-full">
+                        <div class="article-date-banner">
+                            <span class="day">01</span>
+                            <span class="month">Oct</span>
+                        </div>
+                        <img src="article1-thumbnail-1.jpg" alt="AI and Accounting">
+                        <div class="article-info">
+                            <h3>The Future of AI in Accounting</h3>
+                            <p>Artificial Intelligence (AI) is no longer a futuristic concept from science fiction; it is a tangible force actively reshaping industries...</p>
+                        </div>
                     </div>
-                    <img src="https://images.unsplash.com/photo-1674049406232-f28892b5335a?q=80&w=2070&auto=format&fit=crop" alt="AI and Accounting">
-                    <div class="article-info">
-                        <h3>The Future of AI in Accounting</h3>
-                        <p>Exploring how AI is automating tasks, enhancing data analysis, and reshaping the role of the modern accountant.</p>
-                        <a href="article1.html" class="article-link">Read More</a>
-                    </div>
-                </div>
+                </a>
                 <!-- Article 2 Preview -->
-                <div class="article-card-full searchable-content">
-                     <div class="article-date-banner">
-                        <span class="day">15</span>
-                        <span class="month">Sep</span>
+                <a href="article2.html" class="article-card-full-link searchable-content">
+                    <div class="article-card-full">
+                        <div class="article-date-banner">
+                            <span class="day">15</span>
+                            <span class="month">Sep</span>
+                        </div>
+                        <img src="article2-thumbnail-1.jpg" alt="Blockchain Technology">
+                        <div class="article-info">
+                            <h3>Understanding Blockchain's Impact on Financial Audits</h3>
+                            <p>Blockchain technology, the decentralized and immutable ledger system famously known for powering cryptocurrencies like Bitcoin...</p>
+                        </div>
                     </div>
-                    <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain Technology">
-                    <div class="article-info">
-                        <h3>Understanding Blockchain's Impact on Financial Audits</h3>
-                        <p>A look into how blockchain technology offers unprecedented transparency and security, transforming the traditional auditing process.</p>
-                        <a href="article2.html" class="article-link">Read More</a>
-                    </div>
-                </div>
+                </a>
             </div>
 
             <div id="no-results-articles" class="no-results-message" style="display: none;">
@@ -389,7 +394,7 @@
     
     <!-- Mobile Bottom Navigation -->
     <nav class="mobile-nav">
-        <a href="index.html" class="mobile-nav-link active">
+        <a href="index.html" class="mobile-nav-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
